src/validation/tests/parse_errors/snapshots/rusty__validation__tests__parse_errors__parse_error_containers_tests__function_with_illegal_return_variable_declaration-2.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: pou.statements
---
[
    ReferenceExpr {
        kind: Member(
            Identifier {
                name: "a",
            },
        ),
        base: None,
    },
]
