src/validation/tests/parse_errors/snapshots/rusty__validation__tests__parse_errors__parse_error_containers_tests__function_with_illegal_return_variable_declaration.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected DataTypeDefinition but found KeywordVar
  ┌─ <internal>:3:13
  │
3 │             VAR END_VAR
  │             ^^^ Unexpected token: expected DataTypeDefinition but found KeywordVar

error[E007]: Unexpected token: expected Datatype but found VAR
  ┌─ <internal>:3:13
  │
3 │             VAR END_VAR
  │             ^^^ Unexpected token: expected Datatype but found VAR
