src/validation/tests/parse_errors/snapshots/rusty__validation__tests__parse_errors__parse_error_containers_tests__missing_pou_name_2-2.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: pou.statements
---
[
    EmptyStatement,
    ReferenceExpr {
        kind: Member(
            Identifier {
                name: "x",
            },
        ),
        base: None,
    },
]
