src/validation/tests/parse_errors/snapshots/rusty__validation__tests__parse_errors__parse_error_containers_tests__unclosed_var_container-2.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: var_block
---
VariableBlock {
    variables: [
        Variable {
            name: "a",
            data_type: DataTypeReference {
                referenced_type: "INT",
            },
        },
    ],
    variable_block_type: Local,
}
